--- a/main-page.html
+++ b/main-page.html
@@ -218,7 +218,7 @@
                                         <p class="filter__header">Filter</p>
 
                                         <form class="filter__body">
-                                            <!--  -->
+                                            <!-- line 1 -->
                                             <div class="filter__section">
                                                 <div class="filter__title">
                                                     Price
@@ -249,11 +249,286 @@
                                                     />
                                                 </div>
                                             </div>
-                                            <!--  -->
                                             <div
                                                 class="filter__separator filter__separator--rotate"
                                             ></div>
                                             <!--  -->
+                                            <div class="filter__section">
+                                                <div class="filter__title">
+                                                    Size/Weight
+                                                </div>
+                                                <div class="filter__sizeList">
+                                                    <div
+                                                        class="filter__sizeList-num"
+                                                    >
+                                                        500g
+                                                        <img
+                                                            style="
+                                                                margin-top: 2px;
+                                                                width: 15px;
+                                                            "
+                                                            src="./assets/icon/arrow-down.svg"
+                                                            alt=" "
+                                                            class="icon-color"
+                                                        />
+                                                    </div>
+                                                    <div
+                                                        class="filter__separator"
+                                                        style="margin: 0 14px"
+                                                    ></div>
+                                                    <div
+                                                        class="filter__sizeList-unit"
+                                                    >
+                                                        Gram
+
+                                                        <img
+                                                            style="
+                                                                margin-top: 2px;
+                                                                width: 15px;
+                                                            "
+                                                            src="./assets/icon/arrow-down.svg"
+                                                            alt=" "
+                                                            class="icon-color"
+                                                        />
+                                                    </div>
+                                                </div>
+                                                <div class="filter__optionList">
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Small
+                                                        <input
+                                                            name="filter-size"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Medium
+                                                        <input
+                                                            name="filter-size"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Large
+                                                        <input
+                                                            name="filter-size"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div
+                                                class="filter__separator filter__separator--rotate"
+                                            ></div>
+                                            <!--  -->
+                                            <div class="filter__section">
+                                                <div class="filter__title">
+                                                    Brand
+                                                </div>
+
+                                                <div class="filter__search">
+                                                    <input
+                                                        type="text"
+                                                        placeholder="Search brand name"
+                                                    />
+                                                    <img
+                                                        src="./assets/icon/search.svg"
+                                                        alt=" "
+                                                        class="icon-color"
+                                                    />
+                                                </div>
+                                                <div class="filter__optionList">
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Small
+                                                        <input
+                                                            name="filter-brand"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Medium
+                                                        <input
+                                                            name="filter-brand"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Large
+                                                        <input
+                                                            name="filter-brand"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                </div>
+                                            </div>
+
+                                            <!-- line 2 -->
+                                            <div class="filter__section">
+                                                <div class="filter__title">
+                                                    Price
+                                                </div>
+                                                <div
+                                                    class="filter__price-bar"
+                                                ></div>
+                                                <div
+                                                    class="filter__price-range"
+                                                >
+                                                    <div
+                                                        class="filter__price-range-title"
+                                                    >
+                                                        Minimum
+                                                    </div>
+                                                    <div
+                                                        class="filter__price-range-title"
+                                                    >
+                                                        Maximum
+                                                    </div>
+                                                    <input
+                                                        class="filter__price-range-input"
+                                                        placeholder="$ 30.00"
+                                                    />
+                                                    <input
+                                                        class="filter__price-range-input"
+                                                        placeholder="$ 100.00"
+                                                    />
+                                                </div>
+                                            </div>
+                                            <div
+                                                class="filter__separator filter__separator--rotate"
+                                            ></div>
+                                            <!--  -->
+                                            <div class="filter__section">
+                                                <div class="filter__title">
+                                                    Size/Weight
+                                                </div>
+                                                <div class="filter__sizeList">
+                                                    <div
+                                                        class="filter__sizeList-num"
+                                                    >
+                                                        500g
+                                                        <img
+                                                            style="
+                                                                margin-top: 2px;
+                                                                width: 15px;
+                                                            "
+                                                            src="./assets/icon/arrow-down.svg"
+                                                            alt=" "
+                                                            class="icon-color"
+                                                        />
+                                                    </div>
+                                                    <div
+                                                        class="filter__separator"
+                                                        style="margin: 0 14px"
+                                                    ></div>
+                                                    <div
+                                                        class="filter__sizeList-unit"
+                                                    >
+                                                        Gram
+
+                                                        <img
+                                                            style="
+                                                                margin-top: 2px;
+                                                                width: 15px;
+                                                            "
+                                                            src="./assets/icon/arrow-down.svg"
+                                                            alt=" "
+                                                            class="icon-color"
+                                                        />
+                                                    </div>
+                                                </div>
+                                                <div class="filter__optionList">
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Small
+                                                        <input
+                                                            name="filter-size"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Medium
+                                                        <input
+                                                            name="filter-size"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Large
+                                                        <input
+                                                            name="filter-size"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div
+                                                class="filter__separator filter__separator--rotate"
+                                            ></div>
+                                            <!--  -->
+                                            <div class="filter__section">
+                                                <div class="filter__title">
+                                                    Brand
+                                                </div>
+
+                                                <div class="filter__search">
+                                                    <input
+                                                        type="text"
+                                                        placeholder="Search brand name"
+                                                    />
+                                                    <img
+                                                        src="./assets/icon/search.svg"
+                                                        alt=" "
+                                                        class="icon-color"
+                                                    />
+                                                </div>
+                                                <div class="filter__optionList">
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Small
+                                                        <input
+                                                            name="filter-brand"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Medium
+                                                        <input
+                                                            name="filter-brand"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                    <label
+                                                        class="filter__optionItem"
+                                                    >
+                                                        Large
+                                                        <input
+                                                            name="filter-brand"
+                                                            type="radio"
+                                                        />
+                                                    </label>
+                                                </div>
+                                            </div>
+
+                                            <!-- line 3 -->
                                             <div class="filter__section">
                                                 <div class="filter__title">
                                                     Size/Weight
@@ -771,7 +1046,7 @@
             </section>
         </div>
         <!-- body -->
-        <footer id="footer" style="margin-top: 100px"></footer>
+        <footer id="footer" class="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
         </script>
