--- a/production.html
+++ b/production.html
@@ -243,7 +243,8 @@
                                                 <div
                                                     class="production__price-action"
                                                 >
-                                                    <a href="./checkout.html"
+                                                    <a
+                                                        href="./checkout.html"
                                                         class="production__price-btn"
                                                     >
                                                         Add to cart
@@ -373,7 +374,7 @@
             </div>
         </div>
         <!-- body -->
-        <footer id="footer" style="margin-top: 100px"></footer>
+        <footer id="footer" class="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
         </script>
