--- a/sign-in.html
+++ b/sign-in.html
@@ -102,11 +102,11 @@
                                 />
                             </div>
                             <div class="sign__input-line">
-                                <input type="password" placeholder="Password" />
+                                <input type="password" placeholder="Password" required />
                                 <img
                                     src="./assets/icon/lock.svg"
                                     alt="password"
-                                    required
+                                    
                                 />
                             </div>
 
