--- a/sign-up.html
+++ b/sign-up.html
@@ -108,11 +108,12 @@
                                 <input
                                     type="password"
                                     placeholder="Confirm Password"
+                                    required
                                 />
                                 <img
                                     src="./assets/icon/lock.svg"
                                     alt="password"
-                                    required
+                                    
                                 />
                             </div>
                             <div class="f-spb">
@@ -131,12 +132,12 @@
                             </div>
                         </form>
                         <a
-                            href="./index.html"
+                            href="./main-page.html"
                             class="sign__form-submit sign-up"
                         >
                             Sign Up
                         </a>
-                        <a href="./index.html" class="sign__form-submit gmail">
+                        <a href="./main-page.html" class="sign__form-submit gmail">
                             <svg
                                 class="icon-color"
                                 xmlns="http://www.w3.org/2000/svg"
