--- a/user.html
+++ b/user.html
@@ -402,7 +402,7 @@
             </div>
         </div>
         <!-- body -->
-        <footer id="footer" style="margin-top: 100px"></footer>
+        <footer id="footer" class="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
         </script>
