--- a/add-info.html
+++ b/add-info.html
@@ -263,7 +263,7 @@
             </div>
         </div>
         <!-- body -->
-        <footer id="footer" style="margin-top: 100px"></footer>
+        <footer id="footer" class="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
         </script>
