--- a/fav-page.html
+++ b/fav-page.html
@@ -252,7 +252,7 @@
         </div>
 
         <!-- body -->
-        <footer id="footer" style="margin-top: 100px"></footer>
+        <footer id="footer" class="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
         </script>
